# n64-helloworld

./: CMakeLists.txt  main.c
